🛠️table horizontal scroll fixed

--- a/config/styles/index.scss
+++ b/config/styles/index.scss
@@ -496,8 +496,8 @@ hr,
     text-align: center;
     vertical-align: middle;
     height: max-content;
-    &:nth-child(3) {
-      max-width: 135px;
+    &:nth-child(4) {
+      max-width: 100px;
     }
   }
 }
